fix cursor and overflow img

--- a/src/App.css
+++ b/src/App.css
@@ -13,4 +13,5 @@ body {
   background-color: rgba(93, 93, 93, 0.508);
   position: fixed;
   pointer-events: none !important;
+  z-index: 10000 !important;
 }
