--- a/src/style/project.css
+++ b/src/style/project.css
@@ -55,8 +55,8 @@
 }
 #project h3 {
   text-align: center;
-  text-shadow: 0px 0px 10px #eee;
-  color: #eee;
+  text-shadow: 0px 0px 5px #eee;
+  color: #eeeeeeda;
   letter-spacing: 2px;
 }
 
@@ -70,10 +70,9 @@
 
 #project p {
   font-size: 1.1rem;
-  color: #fff;
-  padding: 0px 20px 20px 20px;
+  color: #dbdbdb;
+  padding: 0px 20px 0px 20px;
   text-align: center;
-  letter-spacing: 1px;
 }
 
 @keyframes entry {
